kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamlit-service
  labels:
    app: streamlit-app
spec:
  selector:
    app: streamlit-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8501
  type: NodePort
